# vamp-mr

./: .dockerignore  .gitignore  .gitmodules  README.md
.github/workflows/: docker-ci.yml
config/lego_tasks/: plate_calibration.json  user_config.json
config/lego_tasks/assembly_tasks/: base.json  cliff.json  faucet.json
config/lego_tasks/env_setup/: env_setup_base.json  env_setup_big_chair.json  env_setup_cliff.json  env_setup_faucet.json  env_setup_test.json
config/lego_tasks/robot_properties/: gp4_tool_DH.txt  gp4_tool_alt_DH.txt  gp4_tool_alt_assemble_DH.txt  gp4_tool_assemble_DH.txt  gp4_tool_disassemble_DH.txt  gp4_tool_handover_assemble_DH.txt  r2_base.txt
docker/: Dockerfile
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js
mr_planner_core/: CMakeLists.txt  README.md
mr_planner_core/apps/: mr_planner_core_ik_test.cpp  mr_planner_core_plan.cpp  mr_planner_core_skillplan_to_tpg.cpp
mr_planner_core/cmake/: mr_planner_coreConfig.cmake.in
mr_planner_core/config/srdf/: dual_gp4.srdf  panda_four.srdf  panda_four_bins.srdf  panda_two.srdf  panda_two_rod.srdf
mr_planner_core/include/mr_planner/backends/: vamp_env_factory.h  vamp_instance.h  vamp_plugin_api.h  vamp_plugin_loader.h  vamp_presets.h
mr_planner_core/include/mr_planner/common/: eigen_config.h
mr_planner_core/include/mr_planner/core/: graph.h  instance.h  logger.h  metrics.h  task.h  version.h
mr_planner_core/include/mr_planner/execution/: adg.h  policy.h  tpg.h
mr_planner_core/include/mr_planner/io/: graph_proto.h  skillplan.h
mr_planner_core/include/mr_planner/planning/: SingleAgentPlanner.h  composite_rrt.h  nn_kdtree.h  planner.h  pose_hash.h  prm.h  resampler.h  roadmap.h  rrt.h  rrt_connect.h  shortcutter.h  sipp_rrt.h  strrt.h  voxel_grid.h
mr_planner_core/include/mr_planner/visualization/: meshcat_playback.h
mr_planner_core/proto/: mr_planner_graph.proto
mr_planner_core/python/: mr_planner_core_pybind.cpp
mr_planner_core/python/mr_planner_core/: __init__.py  srdf.py
mr_planner_core/scripts/benchmarks/: core_planning_benchmark.py  core_shortcut_benchmark.py  vamp_collision_benchmark.py
mr_planner_core/scripts/io/: graph_stats.py  inspect_graph.py  mr_planner_graph_pb2.py
mr_planner_core/scripts/planning/: plan_named_poses.py  shortcut_solution_csv.py  skillplan_playback.py
mr_planner_core/scripts/plugins/: generate_vamp_robot_plugin.py  run_kinova_gen3_pipeline.sh
mr_planner_core/scripts/plugins/config/: kortex_three_base_transforms.json  panda_two_base_transforms.json
mr_planner_core/scripts/regression/: python_smoke.py  run_plugin_smoke.sh  run_python_benchmark.sh  run_python_smoke.sh
mr_planner_core/scripts/roboballet/: roboballet_dataset.py
mr_planner_core/scripts/setup/: install_mr_planner_core.sh
mr_planner_core/scripts/srdf/: generate_srdf_acm.py
mr_planner_core/scripts/visualization/: meshcat_bridge.py  test_meshcat_client.py  test_pointcloud_collision.py
mr_planner_core/src/: version.cpp
mr_planner_core/src/backends/: vamp_env_factory.cpp  vamp_instance.cpp  vamp_plugin_loader.cpp
mr_planner_core/src/core/: instance.cpp  logger.cpp  metrics.cpp  task.cpp
mr_planner_core/src/execution/: adg.cpp  policy.cpp  serializer.cpp  tpg.cpp
mr_planner_core/src/io/: graph_proto.cpp  skillplan.cpp
mr_planner_core/src/planning/: SingleAgentPlanner.cpp  composite_rrt.cpp  planner.cpp  prm.cpp  resampler.cpp  roadmap.cpp  rrt.cpp  rrt_connect.cpp  shortcutter.cpp  shortcutter_mt.cpp  sipp_rrt.cpp
mr_planner_lego/: CMakeLists.txt  README.md
mr_planner_lego/apps/: mr_planner_lego_assign.cpp  mr_planner_lego_plan.cpp
mr_planner_lego/cmake/: mr_planner_legoConfig.cmake.in
mr_planner_lego/include/mr_planner/applications/lego/: lego_config_utils.h  lego_plan.h  lego_primitive.h
mr_planner_lego/include/mr_planner/applications/lego/lego/: Lego.hpp
mr_planner_lego/include/mr_planner/applications/lego/lego/Utils/: Common.hpp  ErrorHandling.hpp  FileIO.hpp  Math.hpp
mr_planner_lego/scripts/: task_assignment.py
mr_planner_lego/scripts/benchmarks/: lego_cli_benchmark.py
mr_planner_lego/src/: version.cpp
mr_planner_lego/src/applications/lego/: lego_plan.cpp  lego_primitive.cpp
mr_planner_lego/src/applications/lego/core/: Lego.cpp
scripts/setup/: install_vamp_mr.sh
vamp/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
vamp/cmake/: CompilerSettings.cmake  Dependencies.cmake  FetchInitCPM.cmake  Python.cmake  vampConfig.cmake.in
vamp/resources/gp4/: gp4.srdf  gp4.urdf  gp4_spherized.urdf  gp4_spherized_visual.urdf
vamp/resources/gp4/eoat/: tool_with_cam_gen35.stl
vamp/resources/panda/: panda_spherized.urdf  panda_spherized_visual.urdf
vamp/scripts/: README.md  joint_inspector.py  multi_robot_collision_inspector.py  multi_robot_pybullet_compare.py  random_dance.py
vamp/scripts/cpp/: README.md  multi_robot_debug_example.cc  multi_robot_example.cc
vamp/src/impl/vamp/bindings/: environment.cc  init.hh.in  multi_robot.cc  multi_robot_runtime.hh  python.cc.in  robot.cc.in
vamp/src/impl/vamp/collision/: attachments.hh  capt.hh  multi_robot.hh  shapes.hh
vamp/src/impl/vamp/robots/: gp4.hh  link_mapping.hh  panda.hh
vamp/src/vamp/: __init__.py  __init__.pyi  pybullet_interface.py
